isEqual + bug tests
Added isEqual function

--- a/docs/simple/partials/index.handlebars
+++ b/docs/simple/partials/index.handlebars
@@ -1,2 +1,2 @@
-<h4>API Docs - Main Index</h3>
-<p>Something smart and pretty should probably go here.</p>
+<h4>oxymath</h3>
+<p>Oxymath is a simple JS library for making manipulations with matrix easier. </p>
