--- a/docs/simple/partials/index.handlebars
+++ b/docs/simple/partials/index.handlebars
@@ -1,2 +1,3 @@
 <h4>oxymath</h3>
 <p>Oxymath is a simple JS library for making manipulations with matrix easier. </p>
+<p> You can get source code from Github - <a href="http://github.com/oxygenych/oxymath">http://github.com/oxygenych/oxymath</a>
